--- a/.env.template
+++ b/.env.template
@@ -1,48 +1,44 @@
-### **`.env.template`**
-
-This file serves as a template for the environment variables required to run the server.
-
-```bash
-# Legal Spend MCP Server Configuration
+# Sample .env file for Legal Spend MCP Server
+# Copy this to .env and update with your actual values
 
 # Server Settings
 MCP_SERVER_NAME="Legal Spend Intelligence"
 LOG_LEVEL=INFO
 
-# LegalTracker Configuration
-LEGALTRACKER_ENABLED=false
-LEGALTRACKER_API_KEY=your_api_key_here
+# LegalTracker Configuration (Example with dummy values)
+LEGALTRACKER_ENABLED=true
+LEGALTRACKER_API_KEY=lt_api_key_12345678
 LEGALTRACKER_BASE_URL=https://api.legaltracker.com
 
-# SAP ERP Configuration
+# SAP ERP Configuration (Example - disabled by default)
 SAP_ENABLED=false
-SAP_HOST=your_sap_host
+SAP_HOST=sap.company.com
 SAP_PORT=1433
-SAP_DATABASE=your_database
-SAP_USER=your_username
-SAP_PASSWORD=your_password
+SAP_DATABASE=LEGAL_DB
+SAP_USER=legal_user
+SAP_PASSWORD=secure_password
 SAP_SCHEMA=dbo
 
-# Oracle ERP Configuration
+# Oracle ERP Configuration (Example - disabled by default)
 ORACLE_ENABLED=false
-ORACLE_HOST=your_oracle_host
+ORACLE_HOST=oracle.company.com
 ORACLE_PORT=1521
-ORACLE_SERVICE=your_service
-ORACLE_USER=your_username
-ORACLE_PASSWORD=your_password
+ORACLE_SERVICE=ORCL
+ORACLE_USER=legal_user
+ORACLE_PASSWORD=secure_password
 
-# PostgreSQL Configuration
+# PostgreSQL Configuration (Example - disabled by default)
 POSTGRES_ENABLED=false
-POSTGRES_HOST=your_postgres_host
+POSTGRES_HOST=postgres.company.com
 POSTGRES_PORT=5432
 POSTGRES_DB=legal_spend
-POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password
+POSTGRES_USER=legal_user
+POSTGRES_PASSWORD=secure_password
 
-# File-based Sources
-CSV_ENABLED=false
-CSV_FILE_PATH=/path/to/legal_spend.csv
+# File-based Sources (Examples with sample paths)
+CSV_ENABLED=true
+CSV_FILE_PATH=./data/legal_spend_sample.csv
 
 EXCEL_ENABLED=false
-EXCEL_FILE_PATH=/path/to/legal_spend.xlsx
+EXCEL_FILE_PATH=./data/legal_spend_sample.xlsx
 EXCEL_SHEET_NAME=Sheet1
