--- a/.env.template
+++ b/.env.template
@@ -42,3 +42,42 @@ CSV_FILE_PATH=./data/legal_spend_sample.csv
 EXCEL_ENABLED=false
 EXCEL_FILE_PATH=./data/legal_spend_sample.xlsx
 EXCEL_SHEET_NAME=Sheet1
+
+# SimpleLegal API Configuration
+SIMPLELEGAL_ENABLED=false
+SIMPLELEGAL_API_KEY=
+SIMPLELEGAL_BASE_URL=https://api.simplelegal.com
+
+# Brightflag API Configuration
+BRIGHTFLAG_ENABLED=false
+BRIGHTFLAG_API_KEY=
+BRIGHTFLAG_BASE_URL=https://api.brightflag.com
+
+# TyMetrix 360 API Configuration
+TYMETRIX_ENABLED=false
+TYMETRIX_CLIENT_ID=
+TYMETRIX_CLIENT_SECRET=
+TYMETRIX_BASE_URL=https://api.tymetrix.com
+
+# Onit API Configuration - URL is instance-specific
+ONIT_ENABLED=false
+ONIT_API_KEY=
+ONIT_BASE_URL=https://<your-company>.onit.com
+
+# Microsoft Dynamics 365 Configuration - Resource URL is instance-specific
+DYNAMICS365_ENABLED=false
+DYNAMICS365_CLIENT_ID=
+DYNAMICS365_CLIENT_SECRET=
+DYNAMICS365_TENANT_ID=
+DYNAMICS365_RESOURCE=https://<your-org>.api.crm.dynamics.com
+
+# NetSuite Configuration - Account ID determines URL
+NETSUITE_ENABLED=false
+NETSUITE_ACCOUNT_ID=
+NETSUITE_CONSUMER_KEY=
+NETSUITE_CONSUMER_SECRET=
+NETSUITE_TOKEN_ID=
+NETSUITE_TOKEN_SECRET=
+# NETSUITE_BASE_URL is optional and can be derived, but can be set for sandboxes
+# e.g., https://<account_id>.suitetalk.api.netsuite.com
+NETSUITE_BASE_URL=
