--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# Core dependencies
 mcp[cli]>=1.2.0
 httpx>=0.25.0
 pydantic>=2.0.0
@@ -6,21 +5,10 @@ pandas>=2.0.0
 sqlalchemy>=2.0.0
 python-dateutil>=2.8.0
 python-dotenv>=1.0.0
-
-# Database drivers
 pymssql>=2.2.0
 cx_Oracle>=8.3.0
 psycopg2-binary>=2.9.0
-
-# File handling
 openpyxl>=3.1.0
 aiofiles>=23.0.0
-
-# Development dependencies (optional)
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.0.0
-mypy>=1.0.0
-ruff>=0.1.0
-black>=23.0.0
-pytest-mock>=3.0.0
+msal>=1.20.0
+netsuitesdk>=2.0.0
